Api Response fixed